    test.
  * Improve handling of long lines in debian/changelog, especially when
    dealing with subitems.
  * Ignore rather than print tracebacks when mandatory fields in
    debian/control are missing.
  * When generating watch files for pypi, check package details against
    the API.
  * Strip related comments when removing options from
    debian/source/options.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Fri, 31 Jan 2020 11:34:36 +0000

lintian-brush (0.57) unstable; urgency=medium

  * Add fixer for debian-changelog-line-too-long.
  * Add fixer for misspelling-in-bug-closes.
  * Add some initial code for cleaning up unused lintian overrides.
  * Drop the no-dh-sequencer fixer.
  * Drop unnecessary --with=systemd if debhelper 10 is in use. Closes:
    #949818
  * Add fixer for unused-override. Closes: #932528
  * Properly parse exceptions in license synopsis.
  * Add fixer for autotools-pkg-config-macro-not-cross-compilation-safe.
  * Ship a renamed-tags.json file, since the upstream file has
    disappeared. Closes: #950321

 -- Jelmer Vernooĳ <jelmer@debian.org>  Fri, 31 Jan 2020 11:29:12 +0000

lintian-brush (0.56) unstable; urgency=medium

  [ Jelmer Vernooĳ ]
  * Attempt to keep preferred order of fields in YAML files.
  * Don't write debian/upstream/metadata when just setting name. Closes:
    #948276
  * debian/upstream/metadata: Insert new entries alphabetically. Closes:
    #948155
  * Try harder to avoid rewriting YAML files.

  [ Sven Joachim ]
  * Fix Vcs-{Git,Browser} fields.

  [ Jelmer Vernooĳ ]
  * Add fixer for missing-build-dependency-for-dh_-command.
  * Add fixer for missing-build-dependency-for-dh-addon.
  * s/licence/license/g

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 11 Jan 2020 22:21:59 +0000

lintian-brush (0.55) unstable; urgency=medium

  * Fix verification of Bug-Submit URLs for github.com.
  * Fix handling of non-default encodings in debian/patches.
  * Use dh $@ sequencer.