@@ -1,0 +1,2 @@
+Use common license names: BSD-3-clause (was: BSD).
+Fixed-Lintian-Tags: copyright-does-not-refer-to-common-license-file
