@@ -11,6 +11,8 @@ lintian-brush (0.58) UNRELEASED; urgency=medium
     the API.
   * Strip related comments when removing options from
     debian/source/options.
+  * Keep copies of the BSD license inlined, but rename BSD => BSD-3-
+    clause (per the spec).
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Fri, 31 Jan 2020 11:34:36 +0000
 
